# reboot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  MULTI_TARGET_GUIDE.md  README.md  TEST_CHECKLIST.md  release-notes-v1.1.0.md
.cargo/: config.toml
.github/workflows/: release.yml
agent/: Cargo.toml  build.rs
agent/src/: config.rs  executor.rs  main.rs  security.rs  server.rs  tray.rs
client/: Cargo.toml  build.rs
client/src/: config.rs  connection.rs  logging.rs  main.rs  scan.rs  secret_store.rs  target.rs  ui.rs  wol.rs
common/: Cargo.toml
common/src/: crypto.rs  errors.rs  lib.rs  protocol.rs
