[package]
name = "reboot-client"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

# GUI - use tiny-skia (software rendering) for better compatibility
iced = { version = "0.13", default-features = false, features = [
    "tokio",
    "tiny-skia",   # Software renderer (CPU-based, better compatibility)
] }

# Wake-on-LAN
socket2 = "0.5"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[build-dependencies]
winres = "0.1"
